# ChangeLog for dev-games/libnw
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-games/libnw/ChangeLog,v 1.7 2007/02/08 20:47:09 wolf31o2 Exp $

  08 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  30 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> libnw-1.30.01.ebuild:
  Removed INSTALL.

  19 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org> libnw-1.30.01.ebuild:
  Adding IUSE.

*libnw-1.30.01 (11 Jul 2003)

  11 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Francois Guimond <eyrdan@users.sourceforge.net> #20455.