@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST libnw-1.30.01.tar.gz 356272 RMD160 59298f4f7d931153c0677fa217f7bd056b90800d SHA1 87a9f599c4821a4974eae9613ad9d8f5df088b89 SHA256 0a911608862562b461cd6026f647dac133893063e0a9261dbb5bfe823dc550a4
+DIST libnw-1.30.02.tar.gz 317336 RMD160 3e23498e07f1afe461bf0156b158567741e8c19f SHA1 1d27f214c82d739fb9712871abe8b818c50c3fcc SHA256 bf310934f3d77521a6f52474063a7c7c169eb365f597c5223525f3c26116f89e
 EBUILD libnw-1.30.01.ebuild 625 RMD160 0c314c5cbb5980205a9dd5da52009700fbbb2590 SHA1 0d23656cfeb282c08e8acc22b95c22cd4e40134f SHA256 2ffe0418a4e7defc4f021b0c4759163e9214fe16e6483b1a125138a8d3285c76
-MISC ChangeLog 677 RMD160 298d2bef8223adac86c791c853bc9c29feed992f SHA1 99c0758dc0339373b963fe94a9799388d84f28ad SHA256 834e33f70d95fb05db07f044c0e6b35ad63f71bfbfac49686d2b42c2c3e04c5f
+EBUILD libnw-1.30.02.ebuild 633 RMD160 e89001be6c3bca19ac80ccb5555966dd6fbdbd8c SHA1 f258b96a74f1f5f9d791a714790d3ecd3a2ccc99 SHA256 a586488f1140c4feaa04c78b50ef76095718d1f2d5d71e70aebf9b351a0020be
+MISC ChangeLog 790 RMD160 9385913cfcad166673d46d3621c3d2ff92b59aa9 SHA1 f58abc1323c3ec2f1bff5c598e56572e963d34ff SHA256 fb9bd64cbcdf4a5f168a818ee263ee4e131300b1aaed7196432b577eda93eb29
 MISC metadata.xml 828 RMD160 b0ec8d22f4ff36491867588003c62f14e57fe9ba SHA1 fee66cb4d5b575858cb4ede2ac6fbe3ee658184b SHA256 d4fbe449288de96fe5bcef4b855877a103425ac3bab0f52202825446435dbeb8
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkjBMaQACgkQdz7hIScOURFUIACg7xlq+/X4XvcFciT4Lv9pDfmt
+HlAAnRkvQx1Vc6AoB6/bOsuBZxfxvQnW
+=sOKa
+-----END PGP SIGNATURE-----
