@@ -1,6 +1,11 @@
 # ChangeLog for dev-games/libnw
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/libnw/ChangeLog,v 1.7 2007/02/08 20:47:09 wolf31o2 Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-games/libnw/ChangeLog,v 1.8 2008/09/05 13:18:22 nyhm Exp $
+
+*libnw-1.30.02 (05 Sep 2008)
+
+  05 Sep 2008; Tristan Heaven <nyhm@gentoo.org> +libnw-1.30.02.ebuild:
+  Version bump
 
   08 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
